--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
  REACT_APP_UNSPLASH_KEY= "Client-ID 4vRKElTAA3n1cP9JtmSm-RfMP58GlKzsBU55jn-soHM";
 REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_bXV0dWFsLXNocmV3LTQwLmNsZXJrLmFjY291bnRzLmRldiQ
-REACT_APP_MONGODB_URI= "mongodb+srv://rehmnshs:Imbatmann@rehman.62aufae.mongodb.net/?retryWrites=true&w=majority";
+REACT_APP_MONGODB_URI= mongodb+srv://rehmnshs:Imbatmann@rehman.62aufae.mongodb.net/?retryWrites=true&w=majority;
